# watchman

./: Cargo.toml
.github/workflows/: mayhem.yml  sync.yml
mayhem/: Dockerfile  Mayhemfile_roundtrip  build.sh  roundtrip.mayhemfile  test.sh
mayhem/fuzz/: Cargo.toml
src/: lib.rs
watchman/rust/serde_bser/fuzz/: Cargo.toml
watchman/rust/serde_bser/fuzz/fuzz_targets/: roundtrip.rs
