# Additive cargo-fuzz crate for the Mayhem two-branch model. Upstream watchman has no fuzz/
# harness for serde_bser — the old mayhemheroes fork carried one under
# watchman/rust/serde_bser/fuzz/. This crate preserves that harness additively (clean replay).
[package]
name = "serde_bser-mayhem-fuzz"
version = "0.0.0"
authors = ["Mayhem integration"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.serde_bser]
path = "../../watchman/rust/serde_bser"

[profile.release]
debug = 1

[features]
debug = []
